--- a/css/registroLatam.css
+++ b/css/registroLatam.css
@@ -188,7 +188,7 @@ background-color:#112545;
 
 .header-bottom-top{
 	background-color: rgba(230, 255, 255);
-	  background-image: linear-gradient(to right, rgba(255,0,0,0),rgba(230, 255, 255));
+	  /* background-image: linear-gradient(to right, rgba(255,0,0,0),rgba(230, 255, 255)); */
 
 }
 
